--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
     "nth-check": "^2.0.1",
+    "qrcode.react": "^3.1.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
